--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "serve-favicon": "~2.3.0"
+  },
+  "oauth": {
+    "facebook": {
+      "FACEBOOK_APP_ID": "594228160736253",
+      "FACEBOOK_APP_SECRET": "1cd92a04f2aa948c175013002f00341e",
+      "callbackURL": "http://localhost:3000/auth/facebook/callback"
+    }
   }
 }
