--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "express-session": "^1.13.0",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
+    "passport-facebook": "*",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4",
-    "serve-favicon": "~2.3.0"
+    "passport-twitter": "*",
+    "serve-favicon": "~2.3.0",
+    "passport-google-oauth": "*"
   },
   "oauth": {
     "facebook": {
