--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.13.0",
     "jquery": "^3.0.0",
     "moment": "^2.13.0",
+    "moment-timezone": "^0.5.4",
     "morgan": "~1.6.1",
     "mysql": "^2.11.1",
     "passport": "^0.3.2",
